# dissentis-parser-app

./: .gitignore  Parseador.spec  README.md  pyproject.toml
assets/: desktop.ini
docs/: manual.md
src/: api.py  main.py  parser_core.py
